--- a/examples/app.css
+++ b/examples/app.css
@@ -30,19 +30,25 @@ ul {
 
 .title {
     color: #fff;
-    display: inline-block;
     position: relative;
     background-color: #ff7373;
     padding: 4px 10px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .block-list {
     padding: 20px 0;
     max-width: 360px;
     background-color: #fff;
+    border: 1px solid #eee;
 }
 .block-list > * {
     padding: 10px 40px;
+}
+.block-list > *:first-child {
+    border-top: 1px solid #eee;
+}
+.block-list > * {
+    border-bottom: 1px solid #eee;
 }
 .block-list > *:hover {
     cursor: move;
